# open_mouseless

./: README.md  install.sh  main.py  open_mouseless.spec  pyproject.toml  requirements.txt  settings.json  setup.py
